# scsp-ai-hackathon-c4ads

./: .gitignore  README.md  app.py  dino_main.py  dino_matcher.py  ebay.py  pyproject.toml  rerank.py  sample_env
documents/: DATA_WITH_PATH.csv  ebay_hits.json
documents/final/: Sudan_Ancient_treasures_full_citations.csv  sudan-ancient-kingdoms-artifacts-citations_version2.csv
